# scripts

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yaml
src/common/: __init__.py  jj.py  nix.py  shell.py
src/devshell_compare/: __init__.py
src/devshell_upgrade/: __init__.py
src/direnv_init/: __init__.py
